[gd_scene load_steps=2 format=3 uid="uid://3mvlx6bvilqn"]

[ext_resource type="Script" uid="uid://dg0yfptwv2ohg" path="res://maze/selector.gd" id="1_lurlo"]

[node name="Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lurlo")

[node name="SelectorMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SelectorMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="SelectorMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SelectorMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="SelectorMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Maze2DButton" type="Button" parent="SelectorMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Maze 2D"

[node name="Spacer2" type="Control" parent="SelectorMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Maze3DButton" type="Button" parent="SelectorMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Maze 3D"

[node name="Spacer3" type="Control" parent="SelectorMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="SelectorMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="SelectorMenu/VBoxContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="SelectorMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.67

[node name="CreditsButton" type="Button" parent="SelectorMenu/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "3rd Party
Credits"

[node name="Spacer2" type="Control" parent="SelectorMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.67

[node name="ExitButton" type="Button" parent="SelectorMenu/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Exit"

[node name="Spacer3" type="Control" parent="SelectorMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.67

[node name="Spacer3" type="Control" parent="SelectorMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[connection signal="pressed" from="SelectorMenu/VBoxContainer/HBoxContainer/Maze2DButton" to="." method="_on_maze_2d_button_pressed"]
[connection signal="pressed" from="SelectorMenu/VBoxContainer/HBoxContainer/Maze3DButton" to="." method="_on_maze_3d_button_pressed"]
[connection signal="pressed" from="SelectorMenu/VBoxContainer/HBoxContainer2/CreditsButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="SelectorMenu/VBoxContainer/HBoxContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
